--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <script src="https://cdn.skypack.dev/react-icons@4.2.0/fa"></script>
+    <script src="https://cdn.skypack.dev/react-icons@4.2.0/ri"></script>
+    <script src="https://cdn.skypack.dev/react-jss@10.5.1"></script> -->
 
     <title>Book</title>
   </head>
